Closed Bug 664640 Opened 13 years ago Closed 13 years ago

artificial titles of message/rfc822 attachments borrow from names of other attached files instead of own subject lines

Categories

(Thunderbird :: Message Reader UI, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 10.0

People

(Reporter: ilatypov, Assigned: squib)

References

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows NT 5.1; rv:7.0a1) Gecko/20110615 Firefox/7.0a1
Build Identifier: Mozilla/5.0 (Windows NT 5.1; rv:5.0) Gecko/20110614 Thunderbird/5.0b2pre

A message I composed contained the following attachments, among others:
* a file,
* another message

Normally Thunderbird Nightly (Miramar) shows attached email messages under horizontal lines with titles copying subject lines, with the ".eml" suffix added.  In my particular case, the title unexpectedly borrowed its text from the name of another attached file.

My complete message had a file attachment preceding the nameless message/rfc822 attachment.

I present some of the headers in my composed message for illustration.  I stubbed my company's details from some header parts.

...
Content-Type: multipart/mixed; boundary="_XXX_"
MIME-Version: 1.0

--_XXX_
Content-Type: text/plain; charset="utf-8"
Content-Transfer-Encoding: base64

...

--_XXX_
Content-Type: audio/wav; name="foo.wav"
Content-Description: foo.wav
Content-Disposition: attachment; filename="foo.wav"; size=687148;
	creation-date="Wed, 15 Jun 2011 22:41:34 GMT";
	modification-date="Wed, 15 Jun 2011 22:41:34 GMT"
Content-Transfer-Encoding: base64

...

--_XXX_
Content-Type: audio/wav; name="bar.wav"
Content-Description: bar.wav
Content-Disposition: attachment; filename="bar.wav"; size=678828;
	creation-date="Wed, 15 Jun 2011 22:41:35 GMT";
	modification-date="Wed, 15 Jun 2011 22:41:35 GMT"
Content-Transfer-Encoding: base64

...

--_XXX_
Content-Type: message/rfc822

From: Ilguiz Latypov <ilatypov@example.com>
To: x x <xxx@example.com>, y
	<y@example.com>
Content-Class: urn:content-classes:message
Date: Wed, 15 Jun 2011 17:50:16 -0400
Subject: Polly Wolly Doodle
Thread-Topic: Polly Wolly Doodle
Thread-Index: AxxxQ==
Message-ID: <3yyyF@example.net>
Accept-Language: en-US, en-CA
Content-Language: en-US
X-MS-Has-Attach: yes
X-MS-Exchange-Organization-SCL: -1
X-MS-TNEF-Correlator:
acceptlanguage: en-US, en-CA
Content-Type: multipart/mixed;
	boundary="_YYY_"
MIME-Version: 1.0

--_YYY_
Content-Type: text/plain; charset="utf-8"
Content-Transfer-Encoding: base64

...

--_YYY_
...

--_YYY_--

--_XXX_--


Reproducible: Always

Steps to Reproduce:
1. Start a new message.
2. Attach a file.
3. Attach another message by, for example, dragging-and-dropping an element of the message list pane into the attachment pane of the composed message.
4. Save the message.
5. Close the message composition window.
6. Find the composed message in the Drafts folder and click it once.
7. Observe the titles of the attached file and the attached message in the message view pane below the message list pane.


Actual Results:  
The attached message has the title copying the name of the attached file.


Expected Results:  
The attached message should have the title copying the subject line, with the added ".eml" suffix.


I believe that the algorithm determining the title of nameless attachments has a defect allowing previously attached file names to spill into unnamed attachments.
The offending code: http://mxr.mozilla.org/comm-central/source/mailnews/mime/emitters/src/nsMimeBaseEmitter.cpp#925

I'll get a stack trace later to figure out why the name is wrong.
Confirming.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Taking this. I have a fix for it in the works, but it still needs tests.
Assignee: nobody → squibblyflabbetydoo
Status: NEW → ASSIGNED
Libmime gurus: would testing the HTML mime emitter be feasible in xpcshell, or should I just go the easy way and do it via Mozmill?
(In reply to comment #4)
> Libmime gurus: would testing the HTML mime emitter be feasible in xpcshell,
> or should I just go the easy way and do it via Mozmill?

ccing the libmime gurus might help you get an answer :-)
(In reply to comment #4)
> Libmime gurus: would testing the HTML mime emitter be feasible in xpcshell,
> or should I just go the easy way and do it via Mozmill?

yes, you can use streamMessage with header=filter to invoke the html emitter, I believe. See mailnews/mime/test/unit/test_mimeStreaming.js
Here we go. I accidentally stumbled on a way to test this, so now I can get this out of my queue.

Despite the documentation saying that "header=" is prepended to the header arg for streamMessage(), I can only get the full HTML with "header=filter". I have no idea why.
Attachment #567692 - Flags: review?(dbienvenu)
Comment on attachment 567692 [details] [diff] [review]
Fix this and test it

you can attribute the code to yourself :-)

+ * The Initial Developer of the Original Code is
+ * David Bienvenu <bienvenu@mozillamessaging.com>.

I've verified that the test fails w/o the core changes, and passes w/ them.
Attachment #567692 - Flags: review?(dbienvenu) → review+
Checked in: http://hg.mozilla.org/comm-central/rev/bee90a739e12
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 10.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: