Bug 664640 - artificial titles of message/rfc822 attachments borrow from names of other attached files instead of own subject lines; r=bienvenu